[gd_scene load_steps=13 format=3 uid="uid://dwjq66nym7gmn"]

[ext_resource type="Script" path="res://player/player.gd" id="1_7tilq"]
[ext_resource type="Texture2D" uid="uid://b640xbenp8p6l" path="res://player/img/player_0-Sheet.png" id="1_nwut5"]
[ext_resource type="Script" path="res://player/Sprite.gd" id="3_nhl0r"]

[sub_resource type="Animation" id="Animation_1urf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_setmg"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7qvrt"]
resource_name = "walk_back"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_6lasm"]
resource_name = "walk_front"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_gxgy0"]
resource_name = "walk_side"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1sww8"]
_data = {
"RESET": SubResource("Animation_1urf3"),
"idle": SubResource("Animation_setmg"),
"walk_back": SubResource("Animation_7qvrt"),
"walk_front": SubResource("Animation_6lasm"),
"walk_side": SubResource("Animation_gxgy0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm8hp"]
size = Vector2(20, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qliaw"]
size = Vector2(38, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ob3tr"]
size = Vector2(32, 60)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_7tilq")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_nwut5")
hframes = 24
script = ExtResource("3_nhl0r")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1sww8")
}

[node name="Camera" type="Camera2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 23)
shape = SubResource("RectangleShape2D_vm8hp")

[node name="Shoot_timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Heal_timer" type="Timer" parent="."]

[node name="TopRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, -39)
collide_with_areas = true

[node name="BottomRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 39)
collide_with_areas = true

[node name="LeftRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-27, 0)
collide_with_areas = true

[node name="RightRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(27, 0)
collide_with_areas = true

[node name="Portal_area" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 128

[node name="Collision" type="CollisionShape2D" parent="Portal_area"]
shape = SubResource("RectangleShape2D_qliaw")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -21.0
offset_top = -52.0
offset_right = 67.0
offset_bottom = -25.0
scale = Vector2(0.5, 0.5)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_ob3tr")

[connection signal="timeout" from="Shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Heal_timer" to="." method="_on_heal_timer_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
